[project]
name = "edgedb-pkg"
dynamic = ["version"]
requires-python = '>=3.12.0'
dependencies = ["metapkg@git+https://github.com/edgedb/metapkg.git"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["edgedbpkg", "edgedbpkg.*"] } }
zip-safe = false

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 79
indent-width = 4
exclude = [".github"]

[tool.mypy]
files = ["edgedbpkg", "server/process_incoming.py"]

python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true
strict = true
namespace_packages = true
